BE-#95: Fix merge conflicts