@@ -2,9 +2,9 @@ package com.dhbw.get2gether.backend.widget.application;
 
 import com.dhbw.get2gether.backend.event.application.EventService;
 import com.dhbw.get2gether.backend.event.model.Event;
+import com.dhbw.get2gether.backend.event.model.EventParticipantDto;
 import com.dhbw.get2gether.backend.exceptions.EntityNotFoundException;
 import com.dhbw.get2gether.backend.user.application.UserService;
-import com.dhbw.get2gether.backend.user.model.SimpleUserDto;
 import com.dhbw.get2gether.backend.widget.application.mapper.CarpoolWidgetMapper;
 import com.dhbw.get2gether.backend.widget.application.mapper.WidgetMapper;
 import com.dhbw.get2gether.backend.widget.model.carpool.*;
@@ -14,14 +14,11 @@ import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
+import java.util.stream.Stream;
 
 @Service
-public class CarpoolWidgetService extends AbstractWidgetService{
+public class CarpoolWidgetService extends AbstractWidgetService {
 
     private final CarpoolWidgetMapper mapper;
     private final UserService userService;
@@ -54,7 +51,7 @@ public class CarpoolWidgetService extends AbstractWidgetService{
                 .driverId(userService.getUserByPrincipal(principal).getId())
                 .build();
         widget.addCar(car);
-        return mapToDto(updateAndGetWidget(principal, event, widget));
+        return mapToDto(updateAndGetWidget(principal, event, widget), event);
     }
 
     @PreAuthorize("hasRole('USER')")
@@ -69,10 +66,10 @@ public class CarpoolWidgetService extends AbstractWidgetService{
                 .driverId(originalCar.getDriverId())
                 .riders(originalCar.getRiders())
                 .build();
-        if(!widget.replaceCar(originalCar, updatedCar)) {
+        if (!widget.replaceCar(originalCar, updatedCar)) {
             throw new IllegalStateException("Failed to replace car from carpool widget");
         }
-        return mapToDto(updateAndGetWidget(principal, event, widget));
+        return mapToDto(updateAndGetWidget(principal, event, widget), event);
     }
 
     @PreAuthorize("hasRole('USER')")
@@ -85,7 +82,7 @@ public class CarpoolWidgetService extends AbstractWidgetService{
         if (!widget.removeCar(car)) {
             throw new IllegalStateException("Failed to remove Car from Carpool widget");
         }
-        return mapToDto(updateAndGetWidget(principal, event, widget));
+        return mapToDto(updateAndGetWidget(principal, event, widget), event);
     }
 
     @PreAuthorize("hasRole('USER')")
@@ -100,7 +97,7 @@ public class CarpoolWidgetService extends AbstractWidgetService{
                 .userId(userService.getUserByPrincipal(principal).getId())
                 .build();
         car.addRider(rider);
-        return mapToDto(updateAndGetWidget(principal, event, widget));
+        return mapToDto(updateAndGetWidget(principal, event, widget), event);
     }
 
     @PreAuthorize("hasRole('USER')")
@@ -116,20 +113,31 @@ public class CarpoolWidgetService extends AbstractWidgetService{
         if (!car.removeRider(rider)) {
             throw new IllegalStateException("Failed to remove rider from car");
         }
-        return mapToDto(updateAndGetWidget(principal, event, widget));
+        return mapToDto(updateAndGetWidget(principal, event, widget), event);
     }
 
-    private CarpoolWidgetDto mapToDto(CarpoolWidget widget) {
-        List<SimpleUserDto> simpleUserDtos = userService.getSimpleUsersById(
-                widget.getCars().stream()
-                        .flatMap(car -> car.getRiders().stream())
-                        .map(Rider::getUserId)
-                        .collect(Collectors.toList()));
-        List<SimpleUserDto> driverDtos = userService.getSimpleUsersById(widget.getCars().stream()
+    private CarpoolWidgetDto mapToDto(CarpoolWidget widget, Event event) {
+        List<EventParticipantDto> participantDtos = eventService.getAllEventParticipants(event);
+        List<EventParticipantDto> riders = widget.getCars().stream()
+                .flatMap(car -> car.getRiders().stream())
+                .map(Rider::getUserId)
+                .map(riderId -> participantDtos.stream().filter(participant -> Objects.equals(riderId, participant.getId())).findFirst())
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
+
+        List<EventParticipantDto> drivers = widget.getCars().stream()
                 .map(Car::getDriverId)
-                .collect(Collectors.toList()));
-        List<SimpleUserDto> combinedList = new ArrayList<>(simpleUserDtos);
-        combinedList.addAll(driverDtos);
+                .map(driverId -> participantDtos.stream().filter(participant -> Objects.equals(driverId, participant.getId())).findFirst())
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
+
+        List<EventParticipantDto> combinedList = Stream.concat(
+                riders.stream(),
+                drivers.stream()
+        ).toList();
+
         return widgetMapper.carpoolWidgetToCarpoolWidgetDto(widget, combinedList);
     }
 }
